--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Corso Git</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam temporibus totam accusantium error vero, nulla ullam saepe, nihil omnis recusandae corrupti magnam harum mollitia illum dicta sed tenetur aut veniam. added test here.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam temporibus totam accusantium error vero, nulla ullam saepe, nihil omnis recusandae corrupti magnam harum mollitia illum dicta sed tenetur aut veniam. ciao </p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam temporibus totam accusantium error vero, nulla ullam saepe, nihil omnis recusandae corrupti magnam harum mollitia illum dicta sed tenetur aut veniam. ciao </p>
 </body>
 </html>
